# outremer

./: .env.gpustack  .github:workflows:pages.yml  .github:workflows:pipeline.yml  .gitignore  Dockerfile  PROGRESS.md  README.md  pyproject.toml  requirements-ocr-easyocr.txt  requirements-ocr-mistral.txt  requirements.lock.txt  requirements.txt
.claude/: launch.json
bib/: RileySmith-MotivesEarliestCrusaders-1983_pdf_entities_20251228_220203.bib  hamblin-muslimperspectivesmilitary-2001-afcdfde6edd6.bib  munro-popescrusades-1916-28b5e7f7d267.bib
data/: decisions.json  entity_feedback.json
docs/: CONTEXT_COMPARISON_FEATURE.md  CONTEXT_COMPARISON_VISUAL.md  DHI_INTEGRATION_NOTES.md  EPIC4_HBLS_MCP.md  INTEGRATED_DATA_MODEL.md  KG_DEPLOYMENT_STATUS.md  LOCAL_LLM_ADAPTATION_PLAN.md  MORNING_REPORT_2026-02-28.md  PROPOSAL_SUMMARY.md  PROPOSED_KG_ENHANCEMENTS.md  README.md  RECONCILIATION_INTERFACE_PROPOSAL.md  SDHSS_QUICKSTART.md
evaluation/: THRESHOLDS.md  __init__.py  _pipeline.py  build_fixture.py  diagnose.py  harness.py  metrics.py  sweep.py
scrapers/: COMPLETION_REPORT.md  IMPLEMENTATION_STATUS.md  README_DHI_SCRAPER.md  README_FMG_SCRAPER.md  parse_fmg_offline.py  scrape_dhi_crusaders.py  scrape_fmg_medlands.py
scripts/: build_unified_kg.py  config.py  convert_fmg_to_pipeline.py  export_peerage.py  export_peerage_pre1500.py  extract_persons.py  extract_persons_google.py  filter_ner_noise.py  install-fuseki-with-java.sh  install-fuseki.sh  install-graphdb-alt.sh  install-graphdb-final.sh  install-graphdb-fixed.sh  install-graphdb-manual.sh  install-graphdb-simple.sh  install-graphdb.sh  install-triplestore.sh  linker.py  llm_client.py  outremer_index.json  process_staged.py  rerun_pipeline_fixed.py  run_pipeline.py  run_unix.sh  setup-fuseki-caddy.sh  test_llm_client.py  validate_decisions.py  wikidata_reconcile.py
(+205 files in other folders)
