[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "outremer"
version = "0.1.0"
description = "AI-assisted prosopography of the medieval Levant"
requires-python = ">=3.10"
# Runtime dependencies are pinned in requirements.txt (CI and Docker install from there).
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
]

[tool.setuptools]
packages = ["evaluation"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
  "E",     # pycodestyle errors
  "W",     # pycodestyle warnings
  "F",     # pyflakes
  "I",     # isort
  "UP",    # pyupgrade
]
ignore = [
  "E402",  # import not at top of file (some scripts need conditional setup)
  "E501",  # line too long
  "E701",  # multiple statements on one line (used intentionally in kg scripts)
  "W293",  # blank line contains whitespace (cosmetic)
]

[tool.ruff.lint.per-file-ignores]
"scripts/test_llm_client.py" = ["E402"]
"tests/*" = ["E402"]